--- a/.github/workflows/test_all.yaml
+++ b/.github/workflows/test_all.yaml
@@ -13,6 +13,16 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+
       - name: Run all tests
         run: |
           python -m pytest --cov=src --junitxml=pytest-report.xml --cov-report=xml tests/unit
