--- a/.github/workflows/test_demo_only.yaml
+++ b/.github/workflows/test_demo_only.yaml
@@ -11,6 +11,16 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+
       - name: Run demo test
         run: |
           python -m pytest --cov=src/demo --cov-report=xml tests/unit/demo
