--- a/.github/workflows/test_index_only.yaml
+++ b/.github/workflows/test_index_only.yaml
@@ -1,13 +1,13 @@
-name: test-demo-only
+name: test-index-only
 
 on:
   pull_request:
     paths:
-      - src/demo/demo.py
+      - src/index/index.py
   workflow_dispatch:
 
 jobs:
-  test-demo-only:
+  test-index-only:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
@@ -23,9 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest pytest-cov
 
-      - name: Run demo test
+      - name: Run index test
         run: |
-          python -m pytest --cov=src/demo --cov-report=xml tests/unit/demo
+          python -m pytest --cov=src/index --cov-report=xml tests/unit/index
 
       - name: Upload all coverage
         uses: codecov/codecov-action@v2
@@ -33,4 +33,4 @@ jobs:
           files: coverage.xml
           fail_ci_if_error: false
           verbose: true
-          flags: demo
+          flags: index
