--- a/.github/workflows/test_index_only.yaml
+++ b/.github/workflows/test_index_only.yaml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pytest --cov=src/index --cov-report=xml tests/unit/index
 
-      - name: Upload all coverage
+      - name: Upload index coverage
         uses: codecov/codecov-action@v2
         with:
           files: coverage.xml
