--- a/codecov.yml
+++ b/codecov.yml
@@ -3,29 +3,20 @@ coverage:
     project:
       default:
         target: auto
-      demo:
+    patch:
+      default:
         target: auto
-        flags:
-          - demo
-      index:
-        target: auto
-        flags:
-          - index
+
 comment:
-  layout: "reach, diff, flags, files"
-  behavior: default
-  require_changes: false  
-  require_base: yes
-  require_head: yes       
-  branches: null
   show_carryforward_flags: true
 
-flags:
-  demo:
-    paths:
-      - src/demo/demo.py
-    carryforward: false
-  index:
-    paths:
-      - src/index/index.py
+flag_management:
+  default_rules: # the rules that will be followed for any flag added, generally
     carryforward: true
+    statuses:
+      - name_prefix: project-
+        type: project
+        target: auto
+      - name_prefix: patch-
+        type: patch
+        target: auto
